# ghdash

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
Formula/: ghdash.rb
src/: lib.rs  main.rs
src/app/: actions.rs  event_loop.rs  mod.rs  state.rs  update.rs  view.rs
src/cache/: mod.rs  store.rs
src/github/: auth.rs  graphql.rs  mod.rs  models.rs  queries.rs
src/ui/: mod.rs  theme.rs  widgets.rs
src/util/: browser.rs  config.rs  mod.rs  time.rs
tests/: cache_tests.rs  config_tests.rs  graphql_parse_tests.rs  profile_tests.rs  state_tests.rs  time_tests.rs
